policies/02-require-requests-limits.yaml
# policies/02-require-requests-limits.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-requests-limits
spec:
  validationFailureAction: Enforce
  rules:
  - name: check-requests-limits
    match:
      any:
      - resources:
          kinds:
          - Pod
    validate:
      message: "requests and limits for cpu/memory are required"
      pattern:
        spec:
          containers:
          - resources:
              requests:
                memory: "?*"
                cpu: "?*"
              limits:
                memory: "?*"
                cpu: "?*"
